fix: adjust z-index values for custom select, navigation, and timeframe select components

--- a/src/app/_components/navigation/navigation.module.css
+++ b/src/app/_components/navigation/navigation.module.css
@@ -1,6 +1,6 @@
 .nav {
   position: relative;
-  z-index: var(--layer-1);
+  z-index: var(--layer-3);
   min-inline-size: 4rem;
   block-size: 100%;
 
@@ -100,7 +100,7 @@
 }
 
 .Positioner {
-  z-index: var(--layer-3);
+  z-index: var(--layer-2);
   outline: 0;
 }
 
